# luxeshake

./: .gitignore  Caddyfile  DESIGN.md  README.md  docker-compose.yml  login.html  luxeshake (12).html  test_login_products.py  test_products.py
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: admin.py  config.py  database.py  db_init.py  main.py
backend/app/core/: audit.py  errors.py  logging.py
backend/app/dependencies/: auth_deps.py
backend/app/models/: __init__.py  audit_log.py  complaint.py  delivery_area.py  idempotency.py  order.py  product.py  refresh_token.py  site_content.py  store_settings.py  transaction.py  user.py
backend/app/routers/: admin.py  auth.py  complaints.py  delivery_areas.py  orders.py  products.py  site_content.py  transactions.py  users.py
backend/app/schemas/: audit.py  auth.py  complaint.py  delivery_area.py  order.py  product.py  site_content.py  user.py
backend/app/services/: cache.py  email_service.py  order_service.py
backend/app/templates/: admin_order_alert.html  admin_password_reset.html  order_confirmation.html  out_for_delivery.html  password_reset.html  pickup_ready.html  ticket_created.html  ticket_replied.html  verification.html
backend/app/utils/: security.py
backend/tests/: conftest.py  test_health.py
frontend/: Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/e2e/: example.spec.ts
frontend/src/: middleware.ts
frontend/src/app/: HomePageClient.tsx  code.html  globals.css  layout.tsx  manifest.ts  page.tsx  (+2 more)
(+49 files in other folders)
