[tool.poetry]
name = "luxeshake-backend"
version = "0.1.0"
description = "FastAPI backend for LuxeShake Ordering System"
authors = ["Antigravity <antigravity@google.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.2"
slowapi = "^0.1.10"
google-auth = "^2.56.0"
structlog = "^26.1.0"
tenacity = "^9.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.21,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]
